--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "dev": "vite",
+    "build": "vite build"
   },
   "author": "",
   "license": "ISC",
@@ -13,12 +13,6 @@
     "socket.io-client": "^4.2.0"
   },
   "devDependencies": {
-    "css-loader": "^6.4.0",
-    "html-webpack-plugin": "^5.3.2",
-    "style-loader": "^3.3.0",
-    "webpack": "^5.58.1",
-    "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1",
-    "webpack-merge": "^5.8.0"
+    "vite": "^2.9.0"
   }
 }
