--- a/server/package.json
+++ b/server/package.json
@@ -13,5 +13,8 @@
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "socket.io": "^4.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
